Localization [warning]: "Missing translation entity"

--- a/src/chrome/locale/bg-BG/gmanager.properties
+++ b/src/chrome/locale/bg-BG/gmanager.properties
@@ -7,6 +7,7 @@ gmanager-login-valid-password=Изисква се валидна парола(б
 gmanager-login-email-doesnt-exist=Въведената е-поща не съществува - да се добави ли тази регистрация?
 gmanager-alert-count=%S от %S
 gmanager-alert-login=За да се показват извадки е необходимо вписване.
+gmanager-alert-snippets=The account does not have snippets to be displayed.
 gmanager-sounds-select-file=Избор на файл за звук
 gmanager-sounds-sound-files=Файлове със звуци (%S)
 gmanager-options-import=Gmail Manager NG внасяне
