--- a/src/chrome/locale/ca-AD/gmanager.properties
+++ b/src/chrome/locale/ca-AD/gmanager.properties
@@ -7,6 +7,7 @@ gmanager-login-valid-password=Heu d'entrar una contrasenya vàlida (per exemple,
 gmanager-login-email-doesnt-exist=Aquesta adreça no existeix. Voleu afegir-la igualment?
 gmanager-alert-count=%S de &S
 gmanager-alert-login=Heu de connectar-vos per mostrar els snipplets.
+gmanager-alert-snippets=The account does not have snippets to be displayed.
 gmanager-sounds-select-file=Selecciona un fitxer de so
 gmanager-sounds-sound-files=Fitxers de so (%S)
 gmanager-options-import=Importació del Gmail Manager NG
@@ -55,4 +56,4 @@ gmanager-toolbar-tooltip-inbox-unread=La safata d'entrada té %S missatge(s) no 
 gmanager-toolbar-tooltip-saved-drafts=Teniu %S esborrany(s).
 gmanager-toolbar-tooltip-spam-unread=Teniu %S nou(s) correu(s) brossa.
 gmanager-toolbar-tooltip-space-used=Esteu utilitzant %S MB (%S) dels vostres (%S) MB.
-gmanager-toolbar-tooltip-important-unread %S important unread message(s).
+gmanager-toolbar-tooltip-important-unread=%S important unread message(s).
