--- a/src/chrome/locale/da-DK/gmanager.properties
+++ b/src/chrome/locale/da-DK/gmanager.properties
@@ -7,6 +7,7 @@ gmanager-login-valid-password=Du skal angive et gyldigt kodeord (mellemrum er ik
 gmanager-login-email-doesnt-exist=Email-adressen du indtastede findes ikke. Ønsker du at tilføje den?
 gmanager-alert-count=%S af %S
 gmanager-alert-login=Kontoen skal være logget ind for at der kan vises uddrag.
+gmanager-alert-snippets=The account does not have snippets to be displayed.
 gmanager-sounds-select-file=Vælg lydfil
 gmanager-sounds-sound-files=Lydfiler (%S)
 gmanager-options-import=Gmail Manager NG Import
