--- a/src/chrome/locale/el-GR/gmanager.properties
+++ b/src/chrome/locale/el-GR/gmanager.properties
@@ -7,6 +7,7 @@ gmanager-login-valid-password=Πρέπει να εισάγετε ένα έγκυ
 gmanager-login-email-doesnt-exist=Η διεύθυνση που εισάγατε δεν υπάρχει· θέλετε να προστεθεί ο λογαριασμός;
 gmanager-alert-count=%S από %S
 gmanager-alert-login=Πρέπει να συνδεθείτε στο λογαριασμό για την εμφάνιση των προθεμάτων.
+gmanager-alert-snippets=The account does not have snippets to be displayed.
 gmanager-sounds-select-file=Επιλογή αρχείου ήχου
 gmanager-sounds-sound-files=Αρχεία ήχου (%S)
 gmanager-options-import=Εισαγωγή στο Gmail Manager NG
