--- a/src/chrome/locale/eu-ES/gmanager.properties
+++ b/src/chrome/locale/eu-ES/gmanager.properties
@@ -7,6 +7,7 @@ gmanager-login-valid-password=Baliozko pasahitz bat sartu behar duzu (adib. ez d
 gmanager-login-email-doesnt-exist=Sartutako posta elektronikoaren helbidea ez da existitzen; kontu hau sortu nahi duzu?
 gmanager-alert-count=%S-tik %S
 gmanager-alert-login=Kontuaren saioa hasita egon behar du informazioa erakusteko.
+gmanager-alert-snippets=The account does not have snippets to be displayed.
 gmanager-sounds-select-file=Soinu Fitxategia Aukeratu
 gmanager-sounds-sound-files=Soinu Fitxategia (%S)
 gmanager-options-import=Gmail Manager NG Inportazioa
@@ -55,3 +56,4 @@ gmanager-toolbar-tooltip-inbox-unread=Sarrera-ontziak %S mezu d(it)u irakurri ga
 gmanager-toolbar-tooltip-saved-drafts=%S zirriborro gordeta dituzu.
 gmanager-toolbar-tooltip-spam-unread=%S mezu spam berri dituzu.
 gmanager-toolbar-tooltip-space-used=%S MB (%S%) erabiliak %S MB tik.
+gmanager-toolbar-tooltip-important-unread=%S important unread message(s).
