--- a/src/chrome/locale/fr-FR/gmanager.properties
+++ b/src/chrome/locale/fr-FR/gmanager.properties
@@ -7,6 +7,7 @@ gmanager-login-valid-password=Vous devez entrer un mot de passe valide (les espa
 gmanager-login-email-doesnt-exist=L'adresse que vous avez entrée n'existe pas ; voulez-vous ajouter ce compte ?
 gmanager-alert-count=%S de %S
 gmanager-alert-login=Le compte doit être connecté pour afficher les extraits de code.
+gmanager-alert-snippets=Le compte n'a aucun extrait à afficher.
 gmanager-sounds-select-file=Choisir le fichier son
 gmanager-sounds-sound-files=Fichiers son (%S)
 gmanager-options-import=Importation Gmail Manager NG
@@ -55,3 +56,4 @@ gmanager-toolbar-tooltip-inbox-unread=La boîte de réception a %S message(s) no
 gmanager-toolbar-tooltip-saved-drafts=Vous avez %S brouillon(s) sauvegardé(s).
 gmanager-toolbar-tooltip-spam-unread=Vous avez %S nouveau(x) spam(s).
 gmanager-toolbar-tooltip-space-used=Espace utilisé : %S Mo (%S %) de % Mo.
+gmanager-toolbar-tooltip-important-unread=%S message(s) important(s) non lu(s).
