--- a/src/chrome/locale/gl-ES/gmanager.properties
+++ b/src/chrome/locale/gl-ES/gmanager.properties
@@ -7,6 +7,7 @@ gmanager-login-valid-password=Debes introducir un contrasinal válido (i.e. non 
 gmanager-login-email-doesnt-exist=O correo introducido non existe; ¿quere engadir esta conta?
 gmanager-alert-count=%S de %S
 gmanager-alert-login=Debe accederse á conta para amosar os resumes.
+gmanager-alert-snippets=The account does not have snippets to be displayed.
 gmanager-sounds-select-file=Seleccionar arquivo de son
 gmanager-sounds-sound-files=Arquivos de son (%S)
 gmanager-options-import=Importar Gmail Manager NG
@@ -55,3 +56,4 @@ gmanager-toolbar-tooltip-inbox-unread=A bandexa de entrada ten %S correo(s) non 
 gmanager-toolbar-tooltip-saved-drafts=Ten %S borrador(es) gardado(s).
 gmanager-toolbar-tooltip-spam-unread=Ten %S correo(s) lixo novo(s).
 gmanager-toolbar-tooltip-space-used=Espazo utilizado %S MB (%S%) dos seus %S MB.
+gmanager-toolbar-tooltip-important-unread=%S important unread message(s).
