--- a/src/chrome/locale/it-IT/gmanager.properties
+++ b/src/chrome/locale/it-IT/gmanager.properties
@@ -7,6 +7,7 @@ gmanager-login-valid-password= È necessario inserire una password valida (senza
 gmanager-login-email-doesnt-exist= L'indirizzo e-mail inserito non esiste; aggiungere tale account?
 gmanager-alert-count= %S di %S
 gmanager-alert-login= È necessario aver effettuato l'accesso per visualizzare i frammenti
+gmanager-alert-snippets=The account does not have snippets to be displayed.
 gmanager-sounds-select-file= Seleziona un suono
 gmanager-sounds-sound-files= Suoni (%S)
 gmanager-options-import= Importa impostazioni
@@ -51,7 +52,8 @@ gmanager-toolbar-tooltip-msg-logged-out= Fare clic qui per effettuare l'accesso 
 gmanager-toolbar-tooltip-msg-error-password= Si è verificato un errore durante l'accesso al proprio account | - Verificare la correttezza di nome utente / password e riprovare
 gmanager-toolbar-tooltip-msg-error-network= Si è verificato un errore durante l'accesso al proprio account | - Il servizio Gmail potrebbe essere temporaneamente non disponibile o troppo occupato | - La propria connessione ad Internet potrebbe essere stata interrotta | - Gmail Manager NG proverà automaticamente a ricollegarsi
 gmanager-toolbar-tooltip-msg-error-timeout= L'accesso al proprio account sta richiedendo troppo tempo, riprovare più tardi | - Il servizio Gmail potrebbe essere temporaneamente non disponibile o troppo occupato | - La propria connessione ad Internet potrebbe essere stata interrotta | - Gmail Manager NG proverà automaticamente a ricollegarsi
-gmanager-toolbar-tooltip-inbox-unread= Nuovi messaggi presenti in Posta in arrivo: %S 
+gmanager-toolbar-tooltip-inbox-unread= Nuovi messaggi presenti in Posta in arrivo: %S
 gmanager-toolbar-tooltip-saved-drafts= Messaggi presenti in Bozze: %S
 gmanager-toolbar-tooltip-spam-unread= Nuovi messaggi presenti in Spam: %S
 gmanager-toolbar-tooltip-space-used= Spazio usato %S MB (%S%) su un totale di %S MB
+gmanager-toolbar-tooltip-important-unread=%S important unread message(s).
