--- a/src/chrome/locale/nl-NL/gmanager.properties
+++ b/src/chrome/locale/nl-NL/gmanager.properties
@@ -7,6 +7,7 @@ gmanager-login-valid-password=U dient een geldig wachtwoord in te geven (spaties
 gmanager-login-email-doesnt-exist=Het opgegeven e-mailadres bestaat niet; wilt u dit account toevoegen?
 gmanager-alert-count=%S van %S
 gmanager-alert-login=Het account dient te zijn ingelogd om fragmenten te kunnen weergeven.
+gmanager-alert-snippets=The account does not have snippets to be displayed.
 gmanager-sounds-select-file=Geluidsbestand selecteren
 gmanager-sounds-sound-files=Geluidsbestanden (%S)
 gmanager-options-import=Gmail Manager NG importeren
@@ -55,3 +56,4 @@ gmanager-toolbar-tooltip-inbox-unread=Postvan IN bevat %S ongelezen bericht(en).
 gmanager-toolbar-tooltip-saved-drafts=U hebt %S opgeslagen concept(en).
 gmanager-toolbar-tooltip-spam-unread=U hebt %S nieuw(e) ongewenst(e) bericht(en).
 gmanager-toolbar-tooltip-space-used=Gebruikte ruimte: %S MB van uw %S MB.
+gmanager-toolbar-tooltip-important-unread=%S important unread message(s).
