--- a/src/chrome/locale/pt-PT/gmanager.properties
+++ b/src/chrome/locale/pt-PT/gmanager.properties
@@ -7,6 +7,7 @@ gmanager-login-valid-password=Tem de escrever uma senha válida (os espaços nã
 gmanager-login-email-doesnt-exist=O endereço de correio que escreveu não existe; deseja adicionar esta conta?
 gmanager-alert-count=%S de %S
 gmanager-alert-login=A conta tem de estar ligada para mostrar os snippets.
+gmanager-alert-snippets=The account does not have snippets to be displayed.
 gmanager-sounds-select-file=Seleccione ficheiro de áudio
 gmanager-sounds-sound-files=Ficheiros de áudio (%S)
 gmanager-options-import=Importação do Gmail Manager NG
@@ -55,3 +56,4 @@ gmanager-toolbar-tooltip-inbox-unread=A caixa de entrada tem %s mensagens não l
 gmanager-toolbar-tooltip-saved-drafts=Tem %S rascunho(s) guardado(s).
 gmanager-toolbar-tooltip-spam-unread=Tem %S novas mensagens de spam.
 gmanager-toolbar-tooltip-space-used=Está a usar %S MB (%S%) do seu total de %S MB.
+gmanager-toolbar-tooltip-important-unread=%S important unread message(s).
