--- a/src/chrome/locale/ro-RO/gmanager.properties
+++ b/src/chrome/locale/ro-RO/gmanager.properties
@@ -7,6 +7,7 @@ gmanager-login-valid-password=Trebuie să introduci o parolă validă (fără sp
 gmanager-login-email-doesnt-exist=Emailul introdus nu există; doreşti să creezi acest cont?
 gmanager-alert-count=%S din %S
 gmanager-alert-login=Contul trebuie conectat pentru a afişa fragmentele.
+gmanager-alert-snippets=The account does not have snippets to be displayed.
 gmanager-sounds-select-file=Selectaţi fişierul audio
 gmanager-sounds-sound-files=Fişiere audio (%S)
 gmanager-options-import=Import Gmail Manager NG
@@ -55,3 +56,4 @@ gmanager-toolbar-tooltip-inbox-unread=Ai %S mesaj(e) necitite.
 gmanager-toolbar-tooltip-saved-drafts=Ai %S mesaje salvate draft.
 gmanager-toolbar-tooltip-spam-unread=Ai %S mesaj(e) spam noi.
 gmanager-toolbar-tooltip-space-used=Spaţiul utilizat %S MB (%S%) din %S MB.
+gmanager-toolbar-tooltip-important-unread=%S important unread message(s).
