--- a/src/chrome/locale/tr-TR/gmanager.properties
+++ b/src/chrome/locale/tr-TR/gmanager.properties
@@ -7,6 +7,7 @@ gmanager-login-valid-password=şifreni girmelisin.
 gmanager-login-email-doesnt-exist=Bu mail adresi ile giriş yapılmamış.Bu hesabı eklemek ister misiniz?
 gmanager-alert-count=%S da %S
 gmanager-alert-login=Parçayı görmek için hesaba giriş yapmalısın.
+gmanager-alert-snippets=The account does not have snippets to be displayed.
 gmanager-sounds-select-file=Ses dosyasını seç
 gmanager-sounds-sound-files=Ses dosyası (%S)
 gmanager-options-import=Gmail Manager NG dışa aktar
@@ -55,3 +56,4 @@ gmanager-toolbar-tooltip-inbox-unread=Gelen kutusu %S  okunmayan mesaj
 gmanager-toolbar-tooltip-saved-drafts=kayıtlı taslak %S
 gmanager-toolbar-tooltip-spam-unread=Spam mesajlar %S
 gmanager-toolbar-tooltip-space-used=%S MB (%S%) kullanıyorsun %S MB.
+gmanager-toolbar-tooltip-important-unread=%S important unread message(s).
