--- a/src/chrome/locale/es-CL/gmanager.properties
+++ b/src/chrome/locale/es-CL/gmanager.properties
@@ -7,6 +7,7 @@ gmanager-login-valid-password=Debe ingresar una contraseña correcta (No se perm
 gmanager-login-email-doesnt-exist=El correo ingresado no existe; desea crear una cuenta?
 gmanager-alert-count=%S de %S
 gmanager-alert-login=Debe ingresar a su cuenta para ver los snippets.
+gmanager-alert-snippets=The account does not have snippets to be displayed.
 gmanager-sounds-select-file=Selecciona archivo de sonido
 gmanager-sounds-sound-files=Archivos de Sonido (%S)
 gmanager-options-import=Importar Gmail Manager NG
