--- a/src/chrome/locale/es-ES/gmanager.properties
+++ b/src/chrome/locale/es-ES/gmanager.properties
@@ -7,6 +7,7 @@ gmanager-login-valid-password=Debe introducir una contraseña válida (no se per
 gmanager-login-email-doesnt-exist=La dirección de correo que ha introducido no existe; ¿quiere añadir esta cuenta?
 gmanager-alert-count=%S de %S
 gmanager-alert-login=La cuenta debe estar conectada para mostrar los resúmenes.
+gmanager-alert-snippets=The account does not have snippets to be displayed.
 gmanager-sounds-select-file=Seleccionar archivo de sonido
 gmanager-sounds-sound-files=Archivos de sonido (%S)
 gmanager-options-import=Gmail Manager NG - Importar
