--- a/src/chrome/locale/hr-HR/gmanager.properties
+++ b/src/chrome/locale/hr-HR/gmanager.properties
@@ -7,6 +7,7 @@ gmanager-login-valid-password=Morate unijeti valjanu lozinku (npr. bez razmaka)
 gmanager-login-email-doesnt-exist=Email koji ste unijeli ne postoji; zelite li dodati taj racun?
 gmanager-alert-count=%S od %S
 gmanager-alert-login=Morate biti prijavljeni na racun da bi se prikazali odresci.
+gmanager-alert-snippets=The account does not have snippets to be displayed.
 gmanager-sounds-select-file=Odaberite datoteku zvuka
 gmanager-sounds-sound-files=Datoteke zvuka (%S)
 gmanager-options-import=Gmail Manager NG uvoz
@@ -55,3 +56,4 @@ gmanager-toolbar-tooltip-inbox-unread=U inboxu je %S neprocitanih poruka.
 gmanager-toolbar-tooltip-saved-drafts=Imate %S spremljenih skica.
 gmanager-toolbar-tooltip-spam-unread=Imate %S nove bezvrijdne poste.
 gmanager-toolbar-tooltip-space-used=Prostor iskoristen %S MB (%S%) od %S MB.
+gmanager-toolbar-tooltip-important-unread=%S important unread message(s).
