--- a/src/chrome/locale/hu-HU/gmanager.properties
+++ b/src/chrome/locale/hu-HU/gmanager.properties
@@ -7,6 +7,7 @@ gmanager-login-valid-password=Elfogadható jelszót kell megadnia (szóköz nem 
 gmanager-login-email-doesnt-exist=A megadott email cím nem létezik; szeretné létrehozni ezt a fiókot?
 gmanager-alert-count=%S a %S db-ból
 gmanager-alert-login=A fióknak belépve kell lennie a levélszeletkék megmutatásához.
+gmanager-alert-snippets=The account does not have snippets to be displayed.
 gmanager-sounds-select-file=Hang fájl kiválasztása
 gmanager-sounds-sound-files=Hang fájlok (%S)
 gmanager-options-import=Gmail Manager NG Import
@@ -55,3 +56,4 @@ gmanager-toolbar-tooltip-inbox-unread=%S olvasatlan üzenet.
 gmanager-toolbar-tooltip-saved-drafts=%S mentett piszkozat.
 gmanager-toolbar-tooltip-spam-unread=%S új spam.
 gmanager-toolbar-tooltip-space-used=Felhasznált terület: %S MB (%S%) (összes: %S MB)
+gmanager-toolbar-tooltip-important-unread=%S important unread message(s).
