--- a/src/chrome/locale/sv-SE/gmanager.properties
+++ b/src/chrome/locale/sv-SE/gmanager.properties
@@ -7,6 +7,7 @@ gmanager-login-valid-password=Du måste ange ett giltigt lösenord (dvs. inga me
 gmanager-login-email-doesnt-exist=Epostadressen du angav finns inte: vill du skapa ett nytt konto?
 gmanager-alert-count=%S av %S
 gmanager-alert-login=Du måste vara inloggad för att se utdrag.
+gmanager-alert-snippets=The account does not have snippets to be displayed.
 gmanager-sounds-select-file=Välj ljudfil
 gmanager-sounds-sound-files=Ljudfiler (%S)
 gmanager-options-import=Gmail Manager NG import
@@ -55,3 +56,4 @@ gmanager-toolbar-tooltip-inbox-unread=Inkorgen innehåller (%S) olästa meddelan
 gmanager-toolbar-tooltip-saved-drafts=Du har (%S) sparade utkast.
 gmanager-toolbar-tooltip-spam-unread=Du har (%S) skräppostmeddelande(n).
 gmanager-toolbar-tooltip-space-used=Utrymme som används: %S MB (%S%) av %S MB.
+gmanager-toolbar-tooltip-important-unread=%S important unread message(s).
