--- a/src/chrome/locale/uk-UA/gmanager.properties
+++ b/src/chrome/locale/uk-UA/gmanager.properties
@@ -7,6 +7,7 @@ gmanager-login-valid-password=Надайте правильний пароль (
 gmanager-login-email-doesnt-exist=Ви надали адресу, якої не існує. Чи хочете ви додати цей обліковий запис?
 gmanager-alert-count=%S з %S
 gmanager-alert-login=Щоб показувати уривки, треба увійти до облікового запису.
+gmanager-alert-snippets=The account does not have snippets to be displayed.
 gmanager-sounds-select-file=Вкажіть файл зі звуком
 gmanager-sounds-sound-files=Файли зі звуком (%S)
 gmanager-options-import=Імпорт Gmail Manager NG
@@ -55,3 +56,4 @@ gmanager-toolbar-tooltip-inbox-unread=У вас %S вхідних непрочи
 gmanager-toolbar-tooltip-saved-drafts=У вас %S збережених чернеток.
 gmanager-toolbar-tooltip-spam-unread=У вас %S нових небажаних листів.
 gmanager-toolbar-tooltip-space-used=Використано %S Мб (%S%) з доступних %S Мб.
+gmanager-toolbar-tooltip-important-unread=%S important unread message(s).
