--- a/src/chrome/locale/zh-CN/gmanager.properties
+++ b/src/chrome/locale/zh-CN/gmanager.properties
@@ -7,6 +7,7 @@ gmanager-login-valid-password=请输入有效密码（不能含有空格）。
 gmanager-login-email-doesnt-exist=您输入的邮件地址不存在； 您想添加该账户吗？
 gmanager-alert-count=%S / %S
 gmanager-alert-login=登陆账户后才能显示摘要。
+gmanager-alert-snippets=The account does not have snippets to be displayed.
 gmanager-sounds-select-file=选择声音文件
 gmanager-sounds-sound-files=声音文件 (%S)
 gmanager-options-import=Gmail Manager NG 导入
@@ -55,3 +56,4 @@ gmanager-toolbar-tooltip-inbox-unread=收件箱中有 %S 条未读信息。
 gmanager-toolbar-tooltip-saved-drafts=您有 %S 条已存草稿。
 gmanager-toolbar-tooltip-spam-unread=您有 %S 条垃圾信息。
 gmanager-toolbar-tooltip-space-used=已用空间：%S MB (%S%) / %S MB.
+gmanager-toolbar-tooltip-important-unread=%S important unread message(s).
