Fix french messages

--- a/src/chrome/locale/fr-FR/gmanager.properties
+++ b/src/chrome/locale/fr-FR/gmanager.properties
@@ -33,7 +33,7 @@ gmanager-toolbar-menu-check-all-accounts=Vérifier tous les comptes
 gmanager-toolbar-menu-check-all-accounts-ak=e
 gmanager-toolbar-menu-login-selected-account=Connecter le compte sélectionné
 gmanager-toolbar-menu-login-selected-account-ak=s
-gmanager-toolbar-menu-logout-selected-account=déconnecter le compte sélectionné
+gmanager-toolbar-menu-logout-selected-account=Déconnecter le compte sélectionné
 gmanager-toolbar-menu-logout-selected-account-ak=o
 gmanager-toolbar-menu-check-selected-account=Vérifier le compte sélectionné
 gmanager-toolbar-menu-check-selected-account-ak=f
@@ -55,5 +55,5 @@ gmanager-toolbar-tooltip-msg-error-timeout=La connexion pour votre compte semble
 gmanager-toolbar-tooltip-inbox-unread=La boîte de réception a %S message(s) non lu(s).
 gmanager-toolbar-tooltip-saved-drafts=Vous avez %S brouillon(s) sauvegardé(s).
 gmanager-toolbar-tooltip-spam-unread=Vous avez %S nouveau(x) spam(s).
-gmanager-toolbar-tooltip-space-used=Espace utilisé : %S Mo (%S %) de % Mo.
+gmanager-toolbar-tooltip-space-used=Espace utilisé : %S Mo (%S %) de %S Mo.
 gmanager-toolbar-tooltip-important-unread=%S message(s) important(s) non lu(s).
