--- a/src/chrome/locale/ru-RU/gmanager.properties
+++ b/src/chrome/locale/ru-RU/gmanager.properties
@@ -4,9 +4,10 @@ gmanager-migrate-show-passwords=Показать пароли
 gmanager-migrate-hide-passwords=Скрыть пароли
 gmanager-login-valid-email=Вы должны ввести правильный почтовый адрес (напр. mozilla.ru@gmail.com).
 gmanager-login-valid-password=Вы должны ввести корректный пароль (пробелы не допускаются).
-gmanager-login-email-doesnt-exist=Введеный адрес не использовался ранее; желаете создать для аккаунта новую запись?
+gmanager-login-email-doesnt-exist=Введённый адрес не использовался ранее; желаете создать для аккаунта новую запись?
 gmanager-alert-count=%S из %S
 gmanager-alert-login=Фрагменты сообщений доступны после входа в аккаунт.
+gmanager-alert-snippets=Аккаунт не имеет фрагментов для отображения.
 gmanager-sounds-select-file=Выберите аудио файл
 gmanager-sounds-sound-files=Аудио файлы (%S)
 gmanager-options-import=Импортирование в Gmail Manager NG
@@ -46,12 +47,13 @@ gmanager-toolbar-tooltip-logged-out=- вход не был выполнен.
 gmanager-toolbar-tooltip-logged-in=- вход выполнен успешно.
 gmanager-toolbar-tooltip-logging-in=выполняется подключение...
 gmanager-toolbar-tooltip-checking-mail=выполняется проверка...
-gmanager-toolbar-tooltip-msg-connecting=Пожалуйста подождите пока выполняется подключение к аккаунту...
+gmanager-toolbar-tooltip-msg-connecting=Пожалуйста, подождите, пока выполняется подключение к аккаунту...
 gmanager-toolbar-tooltip-msg-logged-out=Нажмите для входа в текущий аккаунт...
 gmanager-toolbar-tooltip-msg-error-password=Произошла ошибка при подключении к аккаунту.|- Проверьте ваш логин / пароль и попробуйте снова.
 gmanager-toolbar-tooltip-msg-error-network=Произошла ошибка при подключении к аккаунту.|- Сервис GMail может быть временно недоступен или перегружен.|- Ваше Internet-соединение может быть нестабильным.|- Gmail Manager NG автоматически попытается переподключиться.
 gmanager-toolbar-tooltip-msg-error-timeout=Подключение заняло слишком много времени, попробуйте снова.|- Сервис GMail может быть временно недоступен или перегружен.|- Ваше Internet-соединение может быть нестабильным.|- Gmail Manager NG автоматически попытается переподключиться.
 gmanager-toolbar-tooltip-inbox-unread=В папке Входящие %S непрочитанн(ое, ых) сообщ.
-gmanager-toolbar-tooltip-saved-drafts=У вас %S сохраненн(ый, ых) сообщ.
+gmanager-toolbar-tooltip-saved-drafts=У вас %S сохраненн(ое, ых) сообщ.
 gmanager-toolbar-tooltip-spam-unread=В папке Спам %S нов(ое, ых) сообщ.
 gmanager-toolbar-tooltip-space-used=Вы используете %S (%S) из %S МБ.
+gmanager-toolbar-tooltip-important-unread=%S важных непрочитанных сообщ.
