Use correct extension id

--- a/src/chrome/locale/bg-BG/gmanager.properties
+++ b/src/chrome/locale/bg-BG/gmanager.properties
@@ -1,4 +1,4 @@
-extensions.{582195F5-92E7-40a0-A127-DB71295901D7}.description=Управление на множество Gmail регистрации с известия за нови писма.
+extensions.gmail-manager-ng@nedwidek.github.com.description=Управление на множество Gmail регистрации с известия за нови писма.
 gmanager-migrate-no-accounts=Няма намерени регестрации за мигриране.
 gmanager-migrate-show-passwords=Показване на пароли
 gmanager-migrate-hide-passwords=Скриване на пароли
