--- a/src/chrome/locale/ca-AD/gmanager.properties
+++ b/src/chrome/locale/ca-AD/gmanager.properties
@@ -1,4 +1,4 @@
-extensions.{582195F5-92E7-40a0-A127-DB71295901D7}.description=Administració de comptes de Gmail i notificacions de correus nous.
+extensions.gmail-manager-ng@nedwidek.github.com.description=Administració de comptes de Gmail i notificacions de correus nous.
 gmanager-migrate-no-accounts=No s'ha trobat comptes a migrar.
 gmanager-migrate-show-passwords=Mostra les contrasenyes
 gmanager-migrate-hide-passwords=Amaga les contrasenyes
