--- a/src/chrome/locale/cs-CZ/gmanager.properties
+++ b/src/chrome/locale/cs-CZ/gmanager.properties
@@ -1,4 +1,4 @@
-extensions.{582195F5-92E7-40a0-A127-DB71295901D7}.description=Spravujte několik účtů na Gmailu.
+extensions.gmail-manager-ng@nedwidek.github.com.description=Spravujte několik účtů na Gmailu.
 gmanager-migrate-no-accounts=Nebyly nalezeny žádné účty k migraci.
 gmanager-migrate-show-passwords=Zobrazit helsa
 gmanager-migrate-hide-passwords=Skrýt hesla
