--- a/src/chrome/locale/da-DK/gmanager.properties
+++ b/src/chrome/locale/da-DK/gmanager.properties
@@ -1,4 +1,4 @@
-extensions.{582195F5-92E7-40a0-A127-DB71295901D7}.description=Gmail konto administration og meddelelser om ny post.
+extensions.gmail-manager-ng@nedwidek.github.com.description=Gmail konto administration og meddelelser om ny post.
 gmanager-migrate-no-accounts=Der blev ikke fundet nogle konti at migrere.
 gmanager-migrate-show-passwords=Vis kodeord
 gmanager-migrate-hide-passwords=Skjul kodeord
