--- a/src/chrome/locale/el-GR/gmanager.properties
+++ b/src/chrome/locale/el-GR/gmanager.properties
@@ -1,4 +1,4 @@
-extensions.{582195F5-92E7-40a0-A127-DB71295901D7}.description=Διαχείριση λογαριασμών Gmail και ειδοποίηση για νέα μηνύματα ηλεκτρονικής αλληλογραφίας
+extensions.gmail-manager-ng@nedwidek.github.com.description=Διαχείριση λογαριασμών Gmail και ειδοποίηση για νέα μηνύματα ηλεκτρονικής αλληλογραφίας
 gmanager-migrate-no-accounts=Δεν βρέθηκαν λογαριασμοί για μεταφορά.
 gmanager-migrate-show-passwords=Προβολή κωδικών
 gmanager-migrate-hide-passwords=Απόκρυψη κωδικών
