--- a/src/chrome/locale/en-US/gmanager.properties
+++ b/src/chrome/locale/en-US/gmanager.properties
@@ -3,7 +3,7 @@
 # Based on Gmail Manager by Todd Long <longfocus@gmail.com>
 
 # Localized description
-extensions.{582195F5-92E7-40a0-A127-DB71295901D7}.description = Manage multiple Gmail accounts and receive new mail notifications.
+extensions.gmail-manager-ng@nedwidek.github.com.description = Manage multiple Gmail accounts and receive new mail notifications.
 
 # Migrate
 gmanager-migrate-no-accounts = There were no accounts found to migrate.
