--- a/src/chrome/locale/es-AR/gmanager.properties
+++ b/src/chrome/locale/es-AR/gmanager.properties
@@ -1,4 +1,4 @@
-extensions.{582195F5-92E7-40a0-A127-DB71295901D7}.description=Manejo de cuentas Gmail y nuevas notificaciones.
+extensions.gmail-manager-ng@nedwidek.github.com.description=Manejo de cuentas Gmail y nuevas notificaciones.
 gmanager-migrate-no-accounts=No se encontraron cuentas para migrar.
 gmanager-migrate-show-passwords=Mostrar contraseñas
 gmanager-migrate-hide-passwords=Ocultar contraseñas
