--- a/src/chrome/locale/es-CL/gmanager.properties
+++ b/src/chrome/locale/es-CL/gmanager.properties
@@ -1,4 +1,4 @@
-extensions.{582195F5-92E7-40a0-A127-DB71295901D7}.description=Administra varias cuentas de Gmail y recibe avisos de correo.
+extensions.gmail-manager-ng@nedwidek.github.com.description=Administra varias cuentas de Gmail y recibe avisos de correo.
 gmanager-migrate-no-accounts=No se encontraron cuentas para migrar.
 gmanager-migrate-show-passwords=Mostrar las Claves
 gmanager-migrate-hide-passwords=Ocultar las Claves
