--- a/src/chrome/locale/es-ES/gmanager.properties
+++ b/src/chrome/locale/es-ES/gmanager.properties
@@ -1,4 +1,4 @@
-extensions.{582195F5-92E7-40a0-A127-DB71295901D7}.description=Gestor de cuentas Gmail y notificador de nuevos mensajes.
+extensions.gmail-manager-ng@nedwidek.github.com.description=Gestor de cuentas Gmail y notificador de nuevos mensajes.
 gmanager-migrate-no-accounts=No se han encontrado cuentas para migrar.
 gmanager-migrate-show-passwords=Mostrar contraseñas
 gmanager-migrate-hide-passwords=Ocultar contraseñas
