--- a/src/chrome/locale/fa-IR/gmanager.properties
+++ b/src/chrome/locale/fa-IR/gmanager.properties
@@ -1,4 +1,4 @@
-extensions.{582195F5-92E7-40a0-A127-DB71295901D7}.description=مدیریت چندین حساب جی میل و آگاه شدن از موارد جدید
+extensions.gmail-manager-ng@nedwidek.github.com.description=مدیریت چندین حساب جی میل و آگاه شدن از موارد جدید
 gmanager-migrate-no-accounts=هیچ حسابی برای مهاجرت دادن یافت نشد.
 gmanager-migrate-show-passwords=نمایش گذرواژه‌ها
 gmanager-migrate-hide-passwords=پنهان کردن گذرواژه‌ها
