--- a/src/chrome/locale/fi-FI/gmanager.properties
+++ b/src/chrome/locale/fi-FI/gmanager.properties
@@ -1,4 +1,4 @@
-extensions.{582195F5-92E7-40a0-A127-DB71295901D7}.description=Gmail-tilien hallitsemiseen ja uusien viestien saapumisilmoituksiin
+extensions.gmail-manager-ng@nedwidek.github.com.description=Gmail-tilien hallitsemiseen ja uusien viestien saapumisilmoituksiin
 gmanager-migrate-no-accounts=Ei ollut siirrettäviä tilejä.
 gmanager-migrate-show-passwords=Näytä salasanat
 gmanager-migrate-hide-passwords=Piilota salasanat
