--- a/src/chrome/locale/fr-FR/gmanager.properties
+++ b/src/chrome/locale/fr-FR/gmanager.properties
@@ -1,4 +1,4 @@
-extensions.{582195F5-92E7-40a0-A127-DB71295901D7}.description=Gestion des comptes Gmail et notification des nouveaux courriers.
+extensions.gmail-manager-ng@nedwidek.github.com.description=Gestion des comptes Gmail et notification des nouveaux courriers.
 gmanager-migrate-no-accounts=Aucun compte n'a été trouvé pour la migration.
 gmanager-migrate-show-passwords=Afficher les mots de passe
 gmanager-migrate-hide-passwords=Masquer les mots de passe
