--- a/src/chrome/locale/gl-ES/gmanager.properties
+++ b/src/chrome/locale/gl-ES/gmanager.properties
@@ -1,4 +1,4 @@
-extensions.{582195F5-92E7-40a0-A127-DB71295901D7}.description=Xestión de contas Gmail e notificacións de correo novo.
+extensions.gmail-manager-ng@nedwidek.github.com.description=Xestión de contas Gmail e notificacións de correo novo.
 gmanager-migrate-no-accounts=Non se atoparon contas para migrar.
 gmanager-migrate-show-passwords=Amosar contrasinais
 gmanager-migrate-hide-passwords=Agachar contrasinais
