--- a/src/chrome/locale/he-IL/gmanager.properties
+++ b/src/chrome/locale/he-IL/gmanager.properties
@@ -1,4 +1,4 @@
-extensions.{582195F5-92E7-40a0-A127-DB71295901D7}.description=ניהול חשבונות ג'ימייל והתראה על דוא"ל חדש.
+extensions.gmail-manager-ng@nedwidek.github.com.description=ניהול חשבונות ג'ימייל והתראה על דוא"ל חדש.
 gmanager-migrate-no-accounts=לא נמצאו חשבונות להגירה.
 gmanager-migrate-show-passwords=הצג ססמאות
 gmanager-migrate-hide-passwords=הסתר ססמאות
