--- a/src/chrome/locale/hr-HR/gmanager.properties
+++ b/src/chrome/locale/hr-HR/gmanager.properties
@@ -1,4 +1,4 @@
-extensions.{582195F5-92E7-40a0-A127-DB71295901D7}.description=Upravljajtee visestrukim Gmail racunima i primajte obavijesti o novoj posti.
+extensions.gmail-manager-ng@nedwidek.github.com.description=Upravljajtee visestrukim Gmail racunima i primajte obavijesti o novoj posti.
 gmanager-migrate-no-accounts=Nisu pronadeni racuni za premjestanje.
 gmanager-migrate-show-passwords=Pokazi lozinke
 gmanager-migrate-hide-passwords=Sakrij lozinke
