--- a/src/chrome/locale/hu-HU/gmanager.properties
+++ b/src/chrome/locale/hu-HU/gmanager.properties
@@ -1,4 +1,4 @@
-extensions.{582195F5-92E7-40a0-A127-DB71295901D7}.description=Gmail fiók kezelés és új email értesítések.
+extensions.gmail-manager-ng@nedwidek.github.com.description=Gmail fiók kezelés és új email értesítések.
 gmanager-migrate-no-accounts=Nem található migrálandó fiók.
 gmanager-migrate-show-passwords=Jelszó mutatása
 gmanager-migrate-hide-passwords=Jelszó elrejtése
