--- a/src/chrome/locale/it-IT/gmanager.properties
+++ b/src/chrome/locale/it-IT/gmanager.properties
@@ -1,4 +1,4 @@
-extensions.{582195F5-92E7-40a0-A127-DB71295901D7}.description= Permette la gestione di account e notifiche di Gmail
+extensions.gmail-manager-ng@nedwidek.github.com.description= Permette la gestione di account e notifiche di Gmail
 gmanager-migrate-no-accounts= Non è stato trovato alcun account per la migrazione
 gmanager-migrate-show-passwords= Mostra password
 gmanager-migrate-hide-passwords= Nascondi password
