--- a/src/chrome/locale/ja-JP/gmanager.properties
+++ b/src/chrome/locale/ja-JP/gmanager.properties
@@ -1,4 +1,4 @@
-extensions.{582195F5-92E7-40a0-A127-DB71295901D7}.description= Gmail の管理とメール通知の拡張機能です
+extensions.gmail-manager-ng@nedwidek.github.com.description= Gmail の管理とメール通知の拡張機能です
 gmanager-migrate-no-accounts= 移行するアカウントはありません
 gmanager-migrate-show-passwords= パスワード表示
 gmanager-migrate-hide-passwords= パスワード非表示
