--- a/src/chrome/locale/lt-LT/gmanager.properties
+++ b/src/chrome/locale/lt-LT/gmanager.properties
@@ -1,4 +1,4 @@
-extensions.{582195F5-92E7-40a0-A127-DB71295901D7}.description=Valdyk kelias Gmail paskyras ir gauk naujų laiškų pranešimus.
+extensions.gmail-manager-ng@nedwidek.github.com.description=Valdyk kelias Gmail paskyras ir gauk naujų laiškų pranešimus.
 gmanager-migrate-no-accounts=Nerasta paskyrų migravimui.
 gmanager-migrate-show-passwords=Rodyti slaptažodžius
 gmanager-migrate-hide-passwords=Slėpti slaptažodžius
