--- a/src/chrome/locale/nl-NL/gmanager.properties
+++ b/src/chrome/locale/nl-NL/gmanager.properties
@@ -1,4 +1,4 @@
-extensions.{582195F5-92E7-40a0-A127-DB71295901D7}.description=GMail-accountbeheer en notificaties voor nieuwe berichten.
+extensions.gmail-manager-ng@nedwidek.github.com.description=GMail-accountbeheer en notificaties voor nieuwe berichten.
 gmanager-migrate-no-accounts=Er zijn geen te migreren accounts gevonden
 gmanager-migrate-show-passwords=Wachtwoorden weergeven
 gmanager-migrate-hide-passwords=Wachtwoorden verbergen
