--- a/src/chrome/locale/pt-BR/gmanager.properties
+++ b/src/chrome/locale/pt-BR/gmanager.properties
@@ -1,4 +1,4 @@
-extensions.{582195F5-92E7-40a0-A127-DB71295901D7}.description=Gerencia contas do Gmail e notifica novas mensagens.
+extensions.gmail-manager-ng@nedwidek.github.com.description=Gerencia contas do Gmail e notifica novas mensagens.
 gmanager-migrate-no-accounts=Não foram encontradas contas para migrar.
 gmanager-migrate-show-passwords=Exibir senhas
 gmanager-migrate-hide-passwords=Ocultar senhas
