--- a/src/chrome/locale/pt-PT/gmanager.properties
+++ b/src/chrome/locale/pt-PT/gmanager.properties
@@ -1,4 +1,4 @@
-extensions.{582195F5-92E7-40a0-A127-DB71295901D7}.description=Gestão de contas do Gmail e notificações de novo correio.
+extensions.gmail-manager-ng@nedwidek.github.com.description=Gestão de contas do Gmail e notificações de novo correio.
 gmanager-migrate-no-accounts=Não foi encontrada nenhuma conta para migrar.
 gmanager-migrate-show-passwords=Mostrar senhas
 gmanager-migrate-hide-passwords=Ocultar senhas
