--- a/src/chrome/locale/ro-RO/gmanager.properties
+++ b/src/chrome/locale/ro-RO/gmanager.properties
@@ -1,4 +1,4 @@
-extensions.{582195F5-92E7-40a0-A127-DB71295901D7}.description=Configurarea conturilor Gmail şi a notificărilor la primirea mesajelor noi.
+extensions.gmail-manager-ng@nedwidek.github.com.description=Configurarea conturilor Gmail şi a notificărilor la primirea mesajelor noi.
 gmanager-migrate-no-accounts=Nu au fost găsite conturi pentru migrare.
 gmanager-migrate-show-passwords=Arată parolele
 gmanager-migrate-hide-passwords=Ascunde parolele
