--- a/src/chrome/locale/ru-RU/gmanager.properties
+++ b/src/chrome/locale/ru-RU/gmanager.properties
@@ -1,4 +1,4 @@
-extensions.{582195F5-92E7-40a0-A127-DB71295901D7}.description=Удобное управление GMail аккаунтами и уведомлениями о новых сообщениях.
+extensions.gmail-manager-ng@nedwidek.github.com.description=Удобное управление GMail аккаунтами и уведомлениями о новых сообщениях.
 gmanager-migrate-no-accounts=Не найдены аккаунты для мигрирования.
 gmanager-migrate-show-passwords=Показать пароли
 gmanager-migrate-hide-passwords=Скрыть пароли
