--- a/src/chrome/locale/sk-SK/gmanager.properties
+++ b/src/chrome/locale/sk-SK/gmanager.properties
@@ -1,4 +1,4 @@
-extensions.{582195F5-92E7-40a0-A127-DB71295901D7}.description=Správa Gmail účtov a notifikácia nových správ.
+extensions.gmail-manager-ng@nedwidek.github.com.description=Správa Gmail účtov a notifikácia nových správ.
 gmanager-migrate-no-accounts=Na migráciu nie sú dostupné žiadne účty.
 gmanager-migrate-show-passwords=Zobraziť heslá
 gmanager-migrate-hide-passwords=Skryť heslá
