--- a/src/chrome/locale/sl-SI/gmanager.properties
+++ b/src/chrome/locale/sl-SI/gmanager.properties
@@ -1,4 +1,4 @@
-extensions.{582195F5-92E7-40a0-A127-DB71295901D7}.description=Upravljajte z več računi Gmail in prejemajte obvestila o dohodni pošti.
+extensions.gmail-manager-ng@nedwidek.github.com.description=Upravljajte z več računi Gmail in prejemajte obvestila o dohodni pošti.
 gmanager-migrate-no-accounts=Računov za migracijo ni mogoče najti.
 gmanager-migrate-show-passwords=Pokaži gesla
 gmanager-migrate-hide-passwords=Skrij gesla
