--- a/src/chrome/locale/sr-RS/gmanager.properties
+++ b/src/chrome/locale/sr-RS/gmanager.properties
@@ -1,4 +1,4 @@
-extensions.{582195F5-92E7-40a0-A127-DB71295901D7}.description=Менаџмент Гмаил налога и обавештавање о новим порукама.
+extensions.gmail-manager-ng@nedwidek.github.com.description=Менаџмент Гмаил налога и обавештавање о новим порукама.
 gmanager-migrate-no-accounts=Ниједан налог није пронађен за увоз.
 gmanager-migrate-show-passwords=Прикажи лозинке
 gmanager-migrate-hide-passwords=Сакриј лозинке
