--- a/src/chrome/locale/sv-SE/gmanager.properties
+++ b/src/chrome/locale/sv-SE/gmanager.properties
@@ -1,4 +1,4 @@
-extensions.{582195F5-92E7-40a0-A127-DB71295901D7}.description=Gmail konto- och meddelandehantering.
+extensions.gmail-manager-ng@nedwidek.github.com.description=Gmail konto- och meddelandehantering.
 gmanager-migrate-no-accounts=Det fanns inga konton att flytta.
 gmanager-migrate-show-passwords=Visa lösenord.
 gmanager-migrate-hide-passwords=Dölj lösenord.
