--- a/src/chrome/locale/th-TH/gmanager.properties
+++ b/src/chrome/locale/th-TH/gmanager.properties
@@ -1,4 +1,4 @@
-extensions.{582195F5-92E7-40a0-A127-DB71295901D7}.description=การจัดการและแจ้งเตือนบัญชีผู้ใช้ Gmail แบบใหม่
+extensions.gmail-manager-ng@nedwidek.github.com.description=การจัดการและแจ้งเตือนบัญชีผู้ใช้ Gmail แบบใหม่
 gmanager-migrate-no-accounts=ไม่พบบัญชีผู้ใช้ที่จะให้ย้าย
 gmanager-migrate-show-passwords=แสดงรหัสผ่าน
 gmanager-migrate-hide-passwords=ซ่อนรหัสผ่าน
