--- a/src/chrome/locale/tr-TR/gmanager.properties
+++ b/src/chrome/locale/tr-TR/gmanager.properties
@@ -1,4 +1,4 @@
-extensions.{582195F5-92E7-40a0-A127-DB71295901D7}.description=Gmail hesabınızı yönetebilirsiniz.
+extensions.gmail-manager-ng@nedwidek.github.com.description=Gmail hesabınızı yönetebilirsiniz.
 gmanager-migrate-no-accounts=Taşıncak hesap bulunamadı.
 gmanager-migrate-show-passwords=Şifreyi göster
 gmanager-migrate-hide-passwords=şifreyi gizle
