--- a/src/chrome/locale/uk-UA/gmanager.properties
+++ b/src/chrome/locale/uk-UA/gmanager.properties
@@ -1,4 +1,4 @@
-extensions.{582195F5-92E7-40a0-A127-DB71295901D7}.description=Керування обліковими записами Gmail та повідомлення про нові листи.
+extensions.gmail-manager-ng@nedwidek.github.com.description=Керування обліковими записами Gmail та повідомлення про нові листи.
 gmanager-migrate-no-accounts=Немає облікових записів, які можуть бути переміщені.
 gmanager-migrate-show-passwords=Показати паролі
 gmanager-migrate-hide-passwords=Сховати паролі
