--- a/src/chrome/locale/vi-VN/gmanager.properties
+++ b/src/chrome/locale/vi-VN/gmanager.properties
@@ -1,4 +1,4 @@
-extensions.{582195F5-92E7-40a0-A127-DB71295901D7}.description=Quản lí nhiều tài khoản Gmail và nhận thông báo thư mới.
+extensions.gmail-manager-ng@nedwidek.github.com.description=Quản lí nhiều tài khoản Gmail và nhận thông báo thư mới.
 gmanager-migrate-no-accounts=Không có tài khoản nào để di cư.
 gmanager-migrate-show-passwords=Hiện mật khẩu
 gmanager-migrate-hide-passwords=Ẩn mật khẩu
