--- a/src/chrome/locale/zh-CN/gmanager.properties
+++ b/src/chrome/locale/zh-CN/gmanager.properties
@@ -1,4 +1,4 @@
-extensions.{582195F5-92E7-40a0-A127-DB71295901D7}.description=管理多个 Gmail 账户及接收新邮件提醒。
+extensions.gmail-manager-ng@nedwidek.github.com.description=管理多个 Gmail 账户及接收新邮件提醒。
 gmanager-migrate-no-accounts=未找到需迁移的账户。
 gmanager-migrate-show-passwords=显示密码
 gmanager-migrate-hide-passwords=隐藏密码
