--- a/src/chrome/locale/zh-TW/gmanager.properties
+++ b/src/chrome/locale/zh-TW/gmanager.properties
@@ -1,4 +1,4 @@
-extensions.{582195F5-92E7-40a0-A127-DB71295901D7}.description=管理多個 Gmail 帳號及新郵件通知。
+extensions.gmail-manager-ng@nedwidek.github.com.description=管理多個 Gmail 帳號及新郵件通知。
 gmanager-migrate-no-accounts=找不到可搬移的帳號。
 gmanager-migrate-show-passwords=顯示密碼
 gmanager-migrate-hide-passwords=隱藏密碼
