--- a/src/chrome/locale/de-DE/gmanager.properties
+++ b/src/chrome/locale/de-DE/gmanager.properties
@@ -1,4 +1,4 @@
-extensions.{582195F5-92E7-40a0-A127-DB71295901D7}.description=Umfangreiche Funktionen für mehrere Google Mail Konten (z.B. Benachrichtigung über neue Mails)
+extensions.gmail-manager-ng@nedwidek.github.com.description=Umfangreiche Funktionen für mehrere Google Mail Konten (z.B. Benachrichtigung über neue Mails)
 gmanager-migrate-no-accounts=Keine Google Mail Konten zur Übernahme verfügbar
 gmanager-migrate-show-passwords=Passwörter anzeigen
 gmanager-migrate-hide-passwords=Passwörter ausblenden
