--- a/src/chrome/locale/eu-ES/gmanager.properties
+++ b/src/chrome/locale/eu-ES/gmanager.properties
@@ -1,4 +1,4 @@
-extensions.{582195F5-92E7-40a0-A127-DB71295901D7}.description=Gmail kontu anitzak kudeatu eta posta elektroniko berrien ohartaraziak jaso.
+extensions.gmail-manager-ng@nedwidek.github.com.description=Gmail kontu anitzak kudeatu eta posta elektroniko berrien ohartaraziak jaso.
 gmanager-migrate-no-accounts=Ez dira migratzeko konturik aurkitu.
 gmanager-migrate-show-passwords=Erakutsi Pasahitzak
 gmanager-migrate-hide-passwords=Ezkutatu Pasahitzak
