--- a/src/chrome/locale/pl-PL/gmanager.properties
+++ b/src/chrome/locale/pl-PL/gmanager.properties
@@ -1,4 +1,4 @@
-extensions.{582195F5-92E7-40a0-A127-DB71295901D7}.description=Zarządzanie kontami poczty Gmail i informacje o nowej poczcie.
+extensions.gmail-manager-ng@nedwidek.github.com.description=Zarządzanie kontami poczty Gmail i informacje o nowej poczcie.
 gmanager-migrate-no-accounts= Nie znaleziono kont do przemieszczenia.
 gmanager-migrate-show-passwords= Wyświetl hasła
 gmanager-migrate-hide-passwords= Ukryj hasła
